[project]
name = "provenance_llm"
version = "0.0.0"
description = "Validates that the LLM-generated text is supported by the provided contexts."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2",
    "pytest"
]